--- a/chat-app/index.css
+++ b/chat-app/index.css
@@ -32,7 +32,7 @@ body{
 
 .main{
     display:grid;
-    grid-template-columns:12% 88%;
+    grid-template-columns:12% 23% 65%;
     background-color:rgb(97, 13, 13);
     height:690px;
 }
@@ -76,6 +76,31 @@ body{
     position:absolute;
     bottom:10px;
     left:50px
+}
+
+/*******MIDDLE-COLUMN*******/
+.mid-column{
+    background-color: black;
+}
+.chat-search{
+    background-color: black;
+    padding: 10px;
+    position: relative;
+    height: 40px;
+}
+.most-recent-chat{
+    background-color: rgb(43, 27, 117);
+    position: relative;
+    padding: 10px;
+    height: 50px;
+    border: black solid 1px;
+}
+.chat-head{
+    background-color: rgb(43, 27, 117);
+    position: relative;
+    padding: 10px;
+    height: 50px;
+    border: black solid 1px;
 }
 
 /*******RIGHT-COLUMN*******/
