--- a/chat-app/index.css
+++ b/chat-app/index.css
@@ -34,7 +34,7 @@ body{
     display:grid;
     grid-template-columns:12% 23% 65%;
     background-color:rgb(97, 13, 13);
-    height:690px;
+    height:660px;
 }
 
 /******LEFT COLUMN********/
@@ -86,24 +86,34 @@ body{
     background-color: black;
     padding: 10px;
     position: relative;
-    height: 40px;
+    height: 48px;
 }
 .most-recent-chat{
     background-color: rgb(43, 27, 117);
     position: relative;
     padding: 10px;
-    height: 50px;
+    height: 51px;
     border: black solid 1px;
 }
 .chat-head{
     background-color: rgb(43, 27, 117);
     position: relative;
     padding: 10px;
-    height: 50px;
+    height: 51px;
     border: black solid 1px;
 }
 
 /*******RIGHT-COLUMN*******/
-.right{
+.right-column{
     background-color: rgb(58, 53, 53);
+}
+
+.recipient-profile{
+    background-color: rgb(27, 20, 20);
+    padding: 10px;
+    position: absolute;
+    right: 147px;
+    top: 100px;
+    height: 48px;
+    width: 54%;
 }
